Quickstart for self-managed plus associated docs edits
More WIP

More WIP

More WIP

More WIP

More WIP

Add a link

--- a/src/content/graphos/getting-started.mdx
+++ b/src/content/graphos/getting-started.mdx
@@ -1,6 +1,6 @@
 ---
 title: Get started with GraphOS
-description: Create your first Apollo supergraph
+description: Create your first cloud supergraph
 ---
 
 Hello! 👋 This quickstart gets you up and running with GraphOS and your first supergraph. **None of this setup requires a paid plan.**
@@ -10,7 +10,7 @@ To complete these steps, it's helpful to have one of the following available:
 - The URL of your running GraphQL server, with introspection enabled
 - Your GraphQL server's schema, as plaintext SDL
 
-**If you don't have either, that's okay!** You can still try out GraphOS with an example server. To do so, provide all values labeled **Example setup** in the steps below.
+**If you don't have either, that's okay!** You can still try out GraphOS with an example GraphQL server. To do so, provide all values labeled **Example setup** in the steps below.
 
 ## 1. Create your Apollo account
 
@@ -360,7 +360,7 @@ Because you've created a cloud supergraph, operations you run in the Explorer ar
 
 ## 6. View operation metrics
 
-Here's a powerful benefit of a cloud supergraph: because clients execute operations against your GraphOS-managed router, the router automatically collects metrics on those operations! You can then view those metrics in Studio.
+Here's a powerful benefit of a cloud supergraph: because clients execute operations against your GraphOS-managed router, the router automatically collects metrics on those operations! You can then visualize those metrics in Studio.
 
 Go to your variant's **Operations** page, which looks like this:
 
