--- a/src/content/graphos/org/graphs.mdx
+++ b/src/content/graphos/org/graphs.mdx
@@ -133,6 +133,8 @@ flowchart LR;
 
 Even if your API currently uses only _one_ GraphQL server, a cloud supergraph helps you add more subgraphs later as your organization grows.
 
+> [Get started with a cloud supergraph.](../getting-started/)
+
 ### Self-hosted supergraphs
 
 > If you need to host your supergraph's router in your own infrastructure, you might also benefit from the expanded features of an [Enterprise plan](https://www.apollographql.com/pricing/). Please [contact us](https://www.apollographql.com/contact-sales/).
@@ -157,6 +159,8 @@ Your self-hosted router is usually an instance of [the Apollo Router](/router/) 
 > [See the Apollo Router docs.](/router/)
 
 Self-hosted supergraphs provide full control over your router, but they also require handling its deployment and management. Before you adopt this graph type, make sure you have the necessary team structure to properly manage an additional service in your infrastructure.
+
+> [Get started with a self-hosted supergraph.](../self-hosted/)
 
 ### Monographs
 
@@ -274,9 +278,7 @@ Next, you need to publish your graph's schema(s) to Apollo using the Rover CLI. 
 
 6. **If you're creating a self-hosted supergraph,** select the version of Apollo Federation you're using from the **Supergraph Pipeline Track** dropdown.
 
-Your graph has been created, and your Studio organization now includes a **Classic Graphs** tab in addition to its **Supergraphs** tab.
-
-> Note that the **Supergraphs** tab is only for _cloud_ supergraphs. Your self-hosted supergraphs are under the **Classic Graphs** tab.
+Your graph has been created.
 
 Next, you need to publish your graph's schema(s) to Apollo using the Rover CLI. For details, see [Publishing schemas to Apollo Studio](../schema/cli-registration).
 
