--- a/src/content/graphos/cloud-routing/overview.mdx
+++ b/src/content/graphos/cloud-routing/overview.mdx
@@ -13,7 +13,7 @@ When you [create a cloud supergraph](../getting-started/#2-create-your-first-sup
 flowchart LR;
   clients(Clients);
   subgraph "GraphOS";
-  router(["Serverless<br/>cloud router"]);
+  router(["Router"]);
   end;
   subgraph "Your infrastructure";
   api[Your GraphQL API];
@@ -29,7 +29,7 @@ Clients send operations to your router's public endpoint, _instead of_ sending t
 flowchart LR;
   clients(Clients);
   subgraph "GraphOS";
-  router(["Serverless<br/>cloud router"]);
+  router(["Router"]);
   end;
   subgraph "Your infrastructure";
   subgraphA[Subgraph A];
