--- a/src/content/technotes/TN0015-router-to-apm-via-opentelemetry.mdx
+++ b/src/content/technotes/TN0015-router-to-apm-via-opentelemetry.mdx
@@ -1,5 +1,5 @@
 ---
-title: Router Traces & Metrics to APMs Using OpenTelemetry
+title: Apollo Router Traces & Metrics to APMs Using OpenTelemetry
 id: TN0015
 tags: [observability, router]
 ---
