--- a/src/content/graphos/metrics/datadog-integration.mdx
+++ b/src/content/graphos/metrics/datadog-integration.mdx
@@ -1,12 +1,13 @@
 ---
 title: Forwarding metrics to Datadog
+description: For enterprise graphs
 ---
 
 > ⚠️ **Datadog forwarding is available only for [Enterprise plans](https://www.apollographql.com/pricing/).** It is not available for cloud supergraphs.
 
-The **Apollo Datadog integration** enables you to forward Studio performance metrics to your Datadog account. Datadog supports an advanced function API, which enables you to create sophisticated graphs and alerts for GraphQL metrics.
+The **Apollo Datadog integration** enables you to forward your enterprise graph's performance metrics to your Datadog account. Datadog supports an advanced function API, which enables you to create sophisticated visualizations and alerts for GraphQL metrics.
 
-> **Important:** Studio only forwards metrics for **named GraphQL operations**. Metrics for _anonymous_ operations are not forwarded. Make sure your graph's clients name all operations:
+> **Important:** GraphOS only forwards metrics for **named GraphQL operations**. Metrics for _anonymous_ operations are not forwarded. Make sure your graph's clients name all operations:
 >
 > ```graphql
 > ❌
@@ -47,13 +48,16 @@ To integrate with Datadog, you provide your Datadog API key and region to Studio
    - If the domain name is `app.datadoghq.com`, then your API region is `US`.
    - If the domain name is `app.datadoghq.eu`, then your API region is `EU`.
 
-4. In Studio, go to your graph's Integrations page:
+4. In Apollo Studio, go to your graph's Settings page, then go to **This Graph > Reporting**:
 
    <img
-     src="../img/datadog/settings-link.png"
-     alt="Studio Integrations page"
+     src="../img/datadog/datadog-studio-settings.jpg"
+     alt="Graph settings page in Studio with Datadog section"
      class="screenshot"
+     width="600"
    />
+
+    > If you don't see a Datadog Forwarding section on this page, the feature isn't available as part of your organization's plan. Datadog forwarding requires an Enterprise plan.
 
 5. In the Datadog Forwarding section, click **Configure**. Provide your API key and region, then click **Enable**.
 
